Antlr/SlickParser.js
// Generated from Slick.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SlickListener = require('./SlickListener').SlickListener;
var SlickVisitor = require('./SlickVisitor').SlickVisitor;

var grammarFileName = "Slick.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "'Proof'", "'-'", "'Exercise'", "'('", 
                     "')'", "'by'", "'showing'", "'equivalence'", "'to'", 
                     "'a'", "'previous'", "'theorem'", "'the'", "'LHS'", 
                     "'is'", "'equivalent'", "'RHS'", "'implies'", "'follows'", 
                     "'from'", "'assuming'", "'conjuncts'", "'of'", "'antecedent'", 
                     "'contradiction'", "'proving'", "'contrapositive'", 
                     "'case'", "'analysis'", "'on'", "'anlaysis'", "'Must'", 
                     "'prove'", "'(1)'", "'(2)'", "'['", "'\u2254'", "']'", 
                     "','", "'\u00AC'", "'%'", "'true'", "'false'", "'|'", 
                     "'{'", "'}'", "'inv'", "'.'", null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, "'\u2571\u2571'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, "COMMENT", "EXPO", "PROVE", 
                      "RULENUM", "EVAR", "VAR", "TYPE", "NUM", "ADDOP", 
                      "RELOP", "JOP", "IMPOP", "EQOP", "QUANTIFIER", "WS", 
                      "END" ];

var ruleNames =  [ "doc", "proof", "standardProof", "startExpo", "endExpo", 
                   "proofHead", "sep", "header", "theorem", "method", "methodName", 
                   "caseProof", "caseVariable", "caseList", "case1", "case2", 
                   "caseProof1", "caseProof2", "step", "expr", "hint", "hintOp", 
                   "varlist", "exprlist", "emptyRangeExpr", "quantifiedExpr", 
                   "setEnumeration", "setComprehension", "inverseCall", 
                   "functionCall", "typedVar" ];

function SlickParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SlickParser.prototype = Object.create(antlr4.Parser.prototype);
SlickParser.prototype.constructor = SlickParser;

Object.defineProperty(SlickParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SlickParser.EOF = antlr4.Token.EOF;
SlickParser.T__0 = 1;
SlickParser.T__1 = 2;
SlickParser.T__2 = 3;
SlickParser.T__3 = 4;
SlickParser.T__4 = 5;
SlickParser.T__5 = 6;
SlickParser.T__6 = 7;
SlickParser.T__7 = 8;
SlickParser.T__8 = 9;
SlickParser.T__9 = 10;
SlickParser.T__10 = 11;
SlickParser.T__11 = 12;
SlickParser.T__12 = 13;
SlickParser.T__13 = 14;
SlickParser.T__14 = 15;
SlickParser.T__15 = 16;
SlickParser.T__16 = 17;
SlickParser.T__17 = 18;
SlickParser.T__18 = 19;
SlickParser.T__19 = 20;
SlickParser.T__20 = 21;
SlickParser.T__21 = 22;
SlickParser.T__22 = 23;
SlickParser.T__23 = 24;
SlickParser.T__24 = 25;
SlickParser.T__25 = 26;
SlickParser.T__26 = 27;
SlickParser.T__27 = 28;
SlickParser.T__28 = 29;
SlickParser.T__29 = 30;
SlickParser.T__30 = 31;
SlickParser.T__31 = 32;
SlickParser.T__32 = 33;
SlickParser.T__33 = 34;
SlickParser.T__34 = 35;
SlickParser.T__35 = 36;
SlickParser.T__36 = 37;
SlickParser.T__37 = 38;
SlickParser.T__38 = 39;
SlickParser.T__39 = 40;
SlickParser.T__40 = 41;
SlickParser.T__41 = 42;
SlickParser.T__42 = 43;
SlickParser.T__43 = 44;
SlickParser.T__44 = 45;
SlickParser.T__45 = 46;
SlickParser.T__46 = 47;
SlickParser.T__47 = 48;
SlickParser.T__48 = 49;
SlickParser.COMMENT = 50;
SlickParser.EXPO = 51;
SlickParser.PROVE = 52;
SlickParser.RULENUM = 53;
SlickParser.EVAR = 54;
SlickParser.VAR = 55;
SlickParser.TYPE = 56;
SlickParser.NUM = 57;
SlickParser.ADDOP = 58;
SlickParser.RELOP = 59;
SlickParser.JOP = 60;
SlickParser.IMPOP = 61;
SlickParser.EQOP = 62;
SlickParser.QUANTIFIER = 63;
SlickParser.WS = 64;
SlickParser.END = 65;

SlickParser.RULE_doc = 0;
SlickParser.RULE_proof = 1;
SlickParser.RULE_standardProof = 2;
SlickParser.RULE_startExpo = 3;
SlickParser.RULE_endExpo = 4;
SlickParser.RULE_proofHead = 5;
SlickParser.RULE_sep = 6;
SlickParser.RULE_header = 7;
SlickParser.RULE_theorem = 8;
SlickParser.RULE_method = 9;
SlickParser.RULE_methodName = 10;
SlickParser.RULE_caseProof = 11;
SlickParser.RULE_caseVariable = 12;
SlickParser.RULE_caseList = 13;
SlickParser.RULE_case1 = 14;
SlickParser.RULE_case2 = 15;
SlickParser.RULE_caseProof1 = 16;
SlickParser.RULE_caseProof2 = 17;
SlickParser.RULE_step = 18;
SlickParser.RULE_expr = 19;
SlickParser.RULE_hint = 20;
SlickParser.RULE_hintOp = 21;
SlickParser.RULE_varlist = 22;
SlickParser.RULE_exprlist = 23;
SlickParser.RULE_emptyRangeExpr = 24;
SlickParser.RULE_quantifiedExpr = 25;
SlickParser.RULE_setEnumeration = 26;
SlickParser.RULE_setComprehension = 27;
SlickParser.RULE_inverseCall = 28;
SlickParser.RULE_functionCall = 29;
SlickParser.RULE_typedVar = 30;


function DocContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_doc;
    return this;
}

DocContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DocContext.prototype.constructor = DocContext;

DocContext.prototype.proof = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ProofContext);
    } else {
        return this.getTypedRuleContext(ProofContext,i);
    }
};

DocContext.prototype.sep = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SepContext);
    } else {
        return this.getTypedRuleContext(SepContext,i);
    }
};

DocContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterDoc(this);
	}
};

DocContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitDoc(this);
	}
};

DocContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitDoc(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SlickParser.DocContext = DocContext;

SlickParser.prototype.doc = function() {

    var localctx = new DocContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SlickParser.RULE_doc);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 62;
        this.proof();
        this.state = 68;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===SlickParser.T__2) {
            this.state = 63;
            this.sep();
            this.state = 64;
            this.proof();
            this.state = 70;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ProofContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_proof;
    return this;
}

ProofContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProofContext.prototype.constructor = ProofContext;

ProofContext.prototype.standardProof = function() {
    return this.getTypedRuleContext(StandardProofContext,0);
};

ProofContext.prototype.caseProof = function() {
    return this.getTypedRuleContext(CaseProofContext,0);
};

ProofContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterProof(this);
	}
};

ProofContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitProof(this);
	}
};

ProofContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitProof(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SlickParser.ProofContext = ProofContext;

SlickParser.prototype.proof = function() {

    var localctx = new ProofContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SlickParser.RULE_proof);
    try {
        this.state = 73;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 71;
            this.standardProof();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 72;
            this.caseProof();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StandardProofContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_standardProof;
    return this;
}

StandardProofContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StandardProofContext.prototype.constructor = StandardProofContext;

StandardProofContext.prototype.step = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StepContext);
    } else {
        return this.getTypedRuleContext(StepContext,i);
    }
};

StandardProofContext.prototype.header = function() {
    return this.getTypedRuleContext(HeaderContext,0);
};

StandardProofContext.prototype.startExpo = function() {
    return this.getTypedRuleContext(StartExpoContext,0);
};

StandardProofContext.prototype.proofHead = function() {
    return this.getTypedRuleContext(ProofHeadContext,0);
};

StandardProofContext.prototype.hint = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HintContext);
    } else {
        return this.getTypedRuleContext(HintContext,i);
    }
};

StandardProofContext.prototype.END = function() {
    return this.getToken(SlickParser.END, 0);
};

StandardProofContext.prototype.endExpo = function() {
    return this.getTypedRuleContext(EndExpoContext,0);
};

StandardProofContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterStandardProof(this);
	}
};

StandardProofContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitStandardProof(this);
	}
};

StandardProofContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitStandardProof(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SlickParser.StandardProofContext = StandardProofContext;

SlickParser.prototype.standardProof = function() {

    var localctx = new StandardProofContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SlickParser.RULE_standardProof);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SlickParser.T__3 || _la===SlickParser.PROVE) {
            this.state = 75;
            this.header();
        }

        this.state = 79;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SlickParser.EXPO) {
            this.state = 78;
            this.startExpo();
        }

        this.state = 82;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SlickParser.T__1) {
            this.state = 81;
            this.proofHead();
        }

        this.state = 85;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SlickParser.T__0) {
            this.state = 84;
            this.match(SlickParser.T__0);
        }

        this.state = 87;
        this.step();
        this.state = 93;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 59)) & ~0x1f) == 0 && ((1 << (_la - 59)) & ((1 << (SlickParser.RELOP - 59)) | (1 << (SlickParser.IMPOP - 59)) | (1 << (SlickParser.EQOP - 59)))) !== 0)) {
            this.state = 88;
            this.hint();
            this.state = 89;
            this.step();
            this.state = 95;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 97;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SlickParser.END) {
            this.state = 96;
            this.match(SlickParser.END);
        }

        this.state = 100;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SlickParser.EXPO) {
            this.state = 99;
            this.endExpo();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StartExpoContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_startExpo;
    return this;
}

StartExpoContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StartExpoContext.prototype.constructor = StartExpoContext;

StartExpoContext.prototype.EXPO = function() {
    return this.getToken(SlickParser.EXPO, 0);
};

StartExpoContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterStartExpo(this);
	}
};

StartExpoContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitStartExpo(this);
	}
};

StartExpoContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitStartExpo(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SlickParser.StartExpoContext = StartExpoContext;

SlickParser.prototype.startExpo = function() {

    var localctx = new StartExpoContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SlickParser.RULE_startExpo);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this.match(SlickParser.EXPO);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function EndExpoContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_endExpo;
    return this;
}

EndExpoContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EndExpoContext.prototype.constructor = EndExpoContext;

EndExpoContext.prototype.EXPO = function() {
    return this.getToken(SlickParser.EXPO, 0);
};

EndExpoContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterEndExpo(this);
	}
};

EndExpoContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitEndExpo(this);
	}
};

EndExpoContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitEndExpo(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SlickParser.EndExpoContext = EndExpoContext;

SlickParser.prototype.endExpo = function() {

    var localctx = new EndExpoContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SlickParser.RULE_endExpo);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        this.match(SlickParser.EXPO);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ProofHeadContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_proofHead;
    return this;
}

ProofHeadContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProofHeadContext.prototype.constructor = ProofHeadContext;


ProofHeadContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterProofHead(this);
	}
};

ProofHeadContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitProofHead(this);
	}
};

ProofHeadContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitProofHead(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SlickParser.ProofHeadContext = ProofHeadContext;

SlickParser.prototype.proofHead = function() {

    var localctx = new ProofHeadContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, SlickParser.RULE_proofHead);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        this.match(SlickParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SepContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_sep;
    return this;
}

SepContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SepContext.prototype.constructor = SepContext;


SepContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterSep(this);
	}
};

SepContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitSep(this);
	}
};

SepContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitSep(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SlickParser.SepContext = SepContext;

SlickParser.prototype.sep = function() {

    var localctx = new SepContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, SlickParser.RULE_sep);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.match(SlickParser.T__2);
        this.state = 109;
        this.match(SlickParser.T__2);
        this.state = 110;
        this.match(SlickParser.T__2);
        this.state = 112; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 111;
            this.match(SlickParser.T__2);
            this.state = 114; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===SlickParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function HeaderContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_header;
    return this;
}

HeaderContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HeaderContext.prototype.constructor = HeaderContext;


 
HeaderContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function TheoremHeaderContext(parser, ctx) {
	HeaderContext.call(this, parser);
    HeaderContext.prototype.copyFrom.call(this, ctx);
    return this;
}

TheoremHeaderContext.prototype = Object.create(HeaderContext.prototype);
TheoremHeaderContext.prototype.constructor = TheoremHeaderContext;

SlickParser.TheoremHeaderContext = TheoremHeaderContext;

TheoremHeaderContext.prototype.theorem = function() {
    return this.getTypedRuleContext(TheoremContext,0);
};

TheoremHeaderContext.prototype.method = function() {
    return this.getTypedRuleContext(MethodContext,0);
};
TheoremHeaderContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterTheoremHeader(this);
	}
};

TheoremHeaderContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitTheoremHeader(this);
	}
};

TheoremHeaderContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitTheoremHeader(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ExerciseHeaderContext(parser, ctx) {
	HeaderContext.call(this, parser);
    HeaderContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExerciseHeaderContext.prototype = Object.create(HeaderContext.prototype);
ExerciseHeaderContext.prototype.constructor = ExerciseHeaderContext;

SlickParser.ExerciseHeaderContext = ExerciseHeaderContext;

ExerciseHeaderContext.prototype.RULENUM = function() {
    return this.getToken(SlickParser.RULENUM, 0);
};
ExerciseHeaderContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterExerciseHeader(this);
	}
};

ExerciseHeaderContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitExerciseHeader(this);
	}
};

ExerciseHeaderContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitExerciseHeader(this);
    } else {
        return visitor.visitChildren(this);
    }
};



SlickParser.HeaderContext = HeaderContext;

SlickParser.prototype.header = function() {

    var localctx = new HeaderContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, SlickParser.RULE_header);
    var _la = 0; // Token type
    try {
        this.state = 122;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case SlickParser.PROVE:
            localctx = new TheoremHeaderContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 116;
            this.theorem();
            this.state = 118;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===SlickParser.T__6) {
                this.state = 117;
                this.method();
            }

            break;
        case SlickParser.T__3:
            localctx = new ExerciseHeaderContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 120;
            this.match(SlickParser.T__3);
            this.state = 121;
            this.match(SlickParser.RULENUM);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TheoremContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SlickParser.RULE_theorem;
    return this;
}

TheoremContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TheoremContext.prototype.constructor = TheoremContext;


 
TheoremContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function AdHocTheoremContext(parser, ctx) {
	TheoremContext.call(this, parser);
    TheoremContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AdHocTheoremContext.prototype = Object.create(TheoremContext.prototype);
AdHocTheoremContext.prototype.constructor = AdHocTheoremContext;

SlickParser.AdHocTheoremContext = AdHocTheoremContext;

AdHocTheoremContext.prototype.PROVE = function() {
    return this.getToken(SlickParser.PROVE, 0);
};

AdHocTheoremContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};
AdHocTheoremContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterAdHocTheorem(this);
	}
};

AdHocTheoremContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitAdHocTheorem(this);
	}
};

AdHocTheoremContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitAdHocTheorem(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function BibleTheoremContext(parser, ctx) {
	TheoremContext.call(this, parser);
    TheoremContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BibleTheoremContext.prototype = Object.create(TheoremContext.prototype);
BibleTheoremContext.prototype.constructor = BibleTheoremContext;

SlickParser.BibleTheoremContext = BibleTheoremContext;

BibleTheoremContext.prototype.PROVE = function() {
    return this.getToken(SlickParser.PROVE, 0);
};

BibleTheoremContext.prototype.RULENUM = function() {
    return this.getToken(SlickParser.RULENUM, 0);
};
BibleTheoremContext.prototype.enterRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.enterBibleTheorem(this);
	}
};

BibleTheoremContext.prototype.exitRule = function(listener) {
    if(listener instanceof SlickListener ) {
        listener.exitBibleTheorem(this);
	}
};

BibleTheoremContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SlickVisitor ) {
        return visitor.visitBibleTheorem(this);
    } else {
        return visitor.visitChildren(this);
    }
};



SlickParser.TheoremContext = TheoremContext;

SlickParser.prototype.theorem = function() {
